--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "acquisition-scout-backend",
-  "version": "0.1.0",
+  "name": "acquiscout-proxy",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js"   // REQUIRED for Render
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "cors": "^2.8.5"
   }
 }
