--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "acquiscout-proxy",
+  "name": "acquisition-scout-backend",
   "version": "1.0.0",
   "type": "module",
+  "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "start": "node server.js"   // REQUIRED for Render
+    "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
+    "node-fetch": "^3.3.2"
   }
 }
